--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/swagger": "^6.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nuxt/kit": "^3.8.1",
     "@ngrx/effects": "17.0.1",
     "@ngrx/router-store": "17.0.1",
     "@ngrx/store": "17.0.1",
+    "@nuxt/kit": "^3.8.1",
     "@nuxt/schema": "^3.8.1",
     "@nx/angular": "17.2.0-beta.14",
     "@nx/cypress": "17.2.0-beta.14",
@@ -128,6 +128,7 @@
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^17.0.10",
     "@types/yarnpkg__lockfile": "^1.1.5",
+    "@types/zeromq": "5",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "@typescript-eslint/type-utils": "^6.9.1",
@@ -295,7 +296,8 @@
     "webpack-subresource-integrity": "^5.1.0",
     "xstate": "4.34.0",
     "yargs": "^17.6.2",
-    "yargs-parser": "21.1.1"
+    "yargs-parser": "21.1.1",
+    "zeromq": "^5.2.0"
   },
   "author": "Victor Savkin",
   "license": "MIT",
@@ -370,4 +372,3 @@
     ]
   }
 }
-
