--- a/package.json
+++ b/package.json
@@ -128,7 +128,6 @@
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^17.0.10",
     "@types/yarnpkg__lockfile": "^1.1.5",
-    "@types/zeromq": "5",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "@typescript-eslint/type-utils": "^6.9.1",
@@ -296,8 +295,7 @@
     "webpack-subresource-integrity": "^5.1.0",
     "xstate": "4.34.0",
     "yargs": "^17.6.2",
-    "yargs-parser": "21.1.1",
-    "zeromq": "^5.2.0"
+    "yargs-parser": "21.1.1"
   },
   "author": "Victor Savkin",
   "license": "MIT",
